Below are the minimal, targeted changes that will unblock the PR. All edits are shown as `git diff` patches so you can apply them directly.
---

## 1. `package.json`

Add the missing scripts and keep the `bin` section only if you actually ship CLI tools.
If you don’t need the CLI wrappers, you can safely remove the `bin` block – the diff below keeps it but you can delete it if you prefer.

```diff
{
  "name": "agentsmcp",
  "private": true,
+  "scripts": {
+    "test": "pytest",
+    "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
+    "prettier": "npx prettier --write .",
+    "prettier:check": "npx prettier --check .",
+    "pre-commit": "npm run lint && npm run prettier:check"
+  },
+  "bin": {
+    "prettier": "scripts/prettier.sh",
+    "eslint": "scripts/eslint.sh"
+  },
  "dependencies": {
    ...
  },
  "devDependencies": {
    ...
  }
}
```

*Why?*
* `npm test -s` (used by the pre‑commit hook) now runs `pytest`.
* `npm run lint` and `npm run prettier:check` are available for the CI and the hook.
* The `pre-commit` script is a convenient alias that the hook can call.

---

## 2. `scripts/eslint.sh`

Create a lightweight wrapper that uses the local `node_modules/.bin` binaries.

```bash
#!/usr/bin/env bash
set -euo pipefail

# Run eslint with the local binary
./node_modules/.bin/eslint "$@"
```

Make sure the file is executable:

```bash
chmod +x scripts/eslint.sh
```

---

## 3. `scripts/prettier.sh`

Same idea – a wrapper that uses the local Prettier binary.

```bash
#!/usr/bin/env bash
set -euo pipefail

# Run prettier with the local binary
./node_modules/.bin/prettier "$@"
```

Make it executable:

```bash
chmod +x scripts/prettier.sh
```

---

## 4. `.husky/pre-commit`

Replace the global‑tool invocation with the local ones.
If you already have a hook, replace its contents with:

```bash
#!/usr/bin/env bash
# .husky/pre-commit

# Run lint and prettier checks
npm run pre-commit
```

Make sure the hook is executable:

```bash
chmod +x .husky/pre-commit
```

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           python-version: '3.x'
       - run: pip install .[dev]
+      - run: pip install -U ruff
       - run: ruff check src tests
 
   test:
@@ -24,6 +25,7 @@ jobs:
         with:
           python-version: '3.x'
       - run: pip install .[dev]
+      - run: pip install -U pytest
       - run: pytest
 
   security:
@@ -34,11 +36,12 @@ jobs:
         with:
           python-version: '3.x'
       - run: pip install .[dev]
+      - run: pip install -U bandit pip-audit
       - run: bandit -r src
       - run: pip-audit
 
   danger:
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request' && hashFiles('dangerfile.*', 'Dangerfile.*') != ''
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
