docs: add work plan, interfaces, CI docs, and decomposed backlog
- Add docs/work-plan.md with prioritized plan and acceptance criteria
- Add developer interfaces under docs/interfaces/*
- Document all CI workflows under docs/ci/*
- Add decomposed backlog (≤500 LOC tasks) in docs/backlog.md
- Update README links

--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "agentsmcp",
   "private": true,
+  "bin": {
+    "prettier": "scripts/prettier.sh",
+    "eslint": "scripts/eslint.sh"
+  },
   "scripts": {
-    "lint": "prettier -w . && eslint --fix .",
-    "format": "prettier -w ."
+    "lint": "npx prettier -w . && npx eslint --fix .",
+    "format": "npx prettier -w .",
+    "test": "python -m pytest -q"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
