ci(tests): run pytest in mock mode to avoid network/API dependencies
- Set AGENTSMCP_TEST_MODE=1 in Python CI and multi-version CI workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
   test:
     name: Tests (pytest + coverage)
     runs-on: ubuntu-latest
+    env:
+      AGENTSMCP_TEST_MODE: '1'
     strategy:
       fail-fast: false
       matrix:
